2012-08-16  Tom Tromey  <tromey@redhat.com>

	PR binutils/14475:
	* archive.c (bfd_ar_hdr_from_filesystem): Allocate areltdata on
	'member' BFD.  Don't try to free 'ared'.

2012-08-14  Nick Clifton  <nickc@redhat.com>

	* po/uk.po: Updated Ukranian translation.

2012-08-13  Maciej W. Rozycki  <macro@codesourcery.com>

	* elfxx-mips.c (_bfd_mips_elf_size_dynamic_sections): Look up
	the options section in the output rather than input BFD to
	decide if to add a DT_MIPS_OPTIONS tag.

2012-08-13  Maciej W. Rozycki  <macro@codesourcery.com>

	* config.bfd: Wrap mips*el-*-linux* and mips*-*-linux* into
	#ifdef BFD64.

2012-08-13  Ian Bolton  <ian.bolton@arm.com>
            Laurent Desnogues  <laurent.desnogues@arm.com>
            Jim MacArthur  <jim.macarthur@arm.com>
            Marcus Shawcroft  <marcus.shawcroft@arm.com>
            Nigel Stephens  <nigel.stephens@arm.com>
            Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
            Richard Earnshaw  <rearnsha@arm.com>
            Sofiane Naci  <sofiane.naci@arm.com>
            Tejas Belagod  <tejas.belagod@arm.com>
            Yufeng Zhang  <yufeng.zhang@arm.com>

	* Makefile.am: Add AArch64 files.
	* Makefile.in: Regenerate.
	* archures.c (bfd_aarch64_arch): New declaration.
	(bfd_archures_list): Use bfd_archures_list.
	* bfd-in.h (bfd_elf64_aarch64_init_maps): New declaration.
	(bfd_aarch64_process_before_allocation): New declaration.
	(bfd_elf64_aarch64_process_before_allocation): New declaration.
	(bfd_elf64_aarch64_set_options): New declaration.
	(bfd_elf64_aarch64_add_glue_sections_to_bfd): New declaration.
	(BFD_AARCH64_SPECIAL_SYM_TYPE_MAP): New definition.
	(BFD_AARCH64_SPECIAL_SYM_TYPE_TAG): New definition.
	(BFD_AARCH64_SPECIAL_SYM_TYPE_OTHER): New definition.
	(BFD_AARCH64_SPECIAL_SYM_TYPE_ANY): New definition.
	(bfd_is_aarch64_special_symbol_name): New declaration.
	(bfd_aarch64_merge_machines): New declaration.
	(bfd_aarch64_update_notes): New declaration.